syntax = "proto3";

package protobuf;

option go_package = "protobuf/";

message LeaderIp{
    string ip=1;
}
